# E2EHDR

./: .gitignore  .gitmodules  README.md
cameras/: camera_110.json  camera_210.json  response_110.json  response_210.json
docs/: Readme.md
matlab/: hdr.m  registration.m
matlab/Disparity/: disparity.m  main.m  output_im
samples/: Readme.md
samples/OpenGL/Mustafa/: Mustafa.sln
samples/OpenGL/Mustafa/Mustafa/: Mustafa.vcxproj  Mustafa.vcxproj.filters  glsl_program.cpp  glsl_program.h  gui.cpp  gui.h  imgui.ini  imgui_wrapper.cpp  imgui_wrapper.h  main.cpp  pipeline.cpp  pipeline.h  quad.cpp  quad.h
samples/OpenGL/Mustafa/Mustafa/Debug/: vc140.idb
samples/OpenGL/Mustafa/Mustafa/Debug/Mustafa.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mustafa.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
samples/OpenGL/Mustafa/Mustafa/shaders/: hdr.frag  hdr.vert
samples/debevec/: CMakeLists.txt  debevec.cpp  debevec.h  main.cpp
samples/debevec/Header/: debevec.h
samples/debevec/Source/: debevec.cpp
samples/e2e_calib/: .gitignore  BOK.xml  CMakeLists.txt  main.cpp  out_camera_data.xml  out_camera_data_110.xml  out_camera_data_210.xml  settings.xml  stereo_calib.cpp  test.xml
samples/e2e_camera/: .gitignore  Application.cpp  Application.h  CMakeLists.txt  app_config.hpp  calibration.cpp  calibration.h  camera_struct.cpp  camera_struct.h  configuration.cpp  configuration.h  gphoto_impl.cpp  main.cpp  shader_stuff.cpp  shader_stuff.h  shared_frame_queue.hpp
samples/e2e_control/: CMakeLists.txt  camera_control.cpp  camera_control.h  main.cpp
samples/e2e_crf/: CMakeLists.txt  crf.txt  e2e_crf.cpp  e2e_crf.h  main.cpp
samples/e2e_ffmpeg/: CMakeLists.txt  main.cpp
samples/e2e_ffmpeg/e2e_ff/: ffmpeg_wrapper.cpp  ffmpeg_wrapper.h
samples/e2e_gl/: CMakeLists.txt  Drawable.h  Window.cpp  Window.h  framebuffer.cpp  framebuffer.h  glsl_program.cpp  glsl_program.h  gui.cpp  gui.h  imgui_wrapper.cpp  imgui_wrapper.h  main.cpp  merger.cpp  merger.h  pbo_downloader.cpp  pbo_downloader.h  pipeline.cpp  projector_main.cpp  quad.cpp  quad.h  registration.cpp  registration.h  texture.cpp  texture.h
samples/e2e_gl/include/glad/: glad.h
samples/e2e_gl/shaders/: LCD.frag  LCD.vert  aggregate3x3.frag  aggregate3x3withAPKR.frag  aggregate_cross.frag  aggregate_crosswithAPKR.frag  avg.frag  avg.vert  basic.frag  bw_aggregation.frag  cost_ad.frag  cost_adcensus.frag  cost_census.frag  cost_census_modified.frag  frame_pass.frag  frame_pass.vert  hdr.frag  hdr.vert  last_pass.frag  median_filter.frag  merge.frag  outlier_correction.frag  outlier_detection.frag  preview.frag  projector.frag  projector.vert  record_merge_shader.frag  temporal_merge_shader.frag  temporal_stability.frag  texture_copy.frag  tonemap.frag  tonemap.vert  undistort.frag  undistort.vert
samples/e2e_gl/src/: glad.c
samples/e2e_gphoto/: CMakeLists.txt
samples/e2e_gphoto/gphoto/: gphoto.cpp  gphoto.h
samples/e2e_onvif/: CMakeLists.txt
samples/e2e_player/: CMakeLists.txt  Player.cpp  Player.h  Video.cpp  Video.h  main.cpp
samples/e2e_player/shaders/: LCD.frag  LCD.vert  checkerboard.frag  checkerboard_lcd.frag  projector.frag  projector.vert
samples/e2e_rtsp/: CMakeLists.txt  main.cpp
samples/e2e_utils/: CMakeLists.txt  Frame.h  thread_pool.h  util.h
samples/e2e_utils/jpeg/: jpeg_decode.cpp  jpeg_decode.h  jpeg_encode.cpp  jpeg_encode.h
samples/e2e_utils/profiler/: hash.h  profiler.cpp  profiler.h
samples/e2e_utils/spsc/: spsc_queue.h
samples/e2e_vlc/: CMakeLists.txt  main.cpp
samples/e2e_vlc/vlc/: camera.cpp  camera.h
samples/e2e_webcam/: .gitignore  CMakeLists.txt  main.cpp
samples/e2e_webcam/e2e_uvc/: camera.cpp  camera.hpp
samples/e2e_x264/: CMakeLists.txt  X264Decoder.cpp  X264Decoder.hpp  X264Encoder.cpp  X264Encoder.h  YUV420P.cpp  YUV420P.h  hdr_decode.cpp  hdr_decode.hpp  hdr_encode.cpp  hdr_encode.hpp  main.cpp
samples/gl/: CMakeLists.txt  Window.cpp  Window.h  glsl_program.cpp  glsl_program.h  gui.cpp  imgui_wrapper.cpp  main.cpp  pipeline.h  quad.cpp  quad.h
samples/gl/shaders/: edge_detection.frag
samples/libgphoto2/: CMakeLists.txt  Frame.cpp  Frame.h  gphoto.cpp  gphoto_wrapper.h  hash.h  jpeg_decode.cpp  jpeg_decode.h  main.cpp  profiler.cpp  profiler.h  util.h
samples/libgphoto2/gphoto_wrap/: gphoto.cpp  gphoto_wrapper.h
samples/libgphoto2/profiler/: profiler.cpp  profiler.h
website/: gulpfile.min.js  index.html
website/css/: agency.css  agency.min.css
website/js/: agency.min.js  contact_me.min.js  jqBootstrapValidation.min.js
website/less/: agency.less
